force-app/main/default/objects/AH_Picklists_by_Object_and_Record_Type__mdt/AH_Picklists_by_Object_and_Record_Type__mdt.object-meta.xml
<CustomObject>
    <description>NICC-046278

Referenced in the Support Case Lightning Flow</description>
    <label>AH Picklists by Object and Record Type</label>
    <pluralLabel>AH Picklists by Object and Record Type</pluralLabel>
</CustomObject>