force-app/main/default/objects/AH_Picklists_by_Object_and_Record_Type__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>