force-app/main/default/objects/AH_Picklists_by_Object_and_Record_Type__mdt/fields/Picklist_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Field_Value__c</fullName>
    <label>Picklist Field Value</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>