force-app/main/default/objects/AH_Picklists_by_Object_and_Record_Type__mdt/fields/Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_API_Name__c</fullName>
    <label>Record Type API Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>